--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "engineStrict": true,
   "scripts": {
-    "start": "NODE_ENV=development concurrently \"npm:collab\" \"npm run dev --prefix packages/lexical-playground\"",
+    "start": "concurrently \"npm:collab\" \"npm run dev --prefix packages/lexical-playground\"",
     "start:website": "npm run start --prefix packages/lexical-website-new -- --port 3001",
     "dev": "npm run dev --prefix packages/lexical-playground",
     "build": "node scripts/build.js --clean",
